--- a/flex.css
+++ b/flex.css
@@ -20,6 +20,8 @@
     border-width: 4px;
     border-color: rgb(75, 0, 130);
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .flex-container2 {
@@ -33,4 +35,8 @@
     border-style: solid;
     border-width: 2px;
     border-color: red;
+}
+
+body {
+    background-color: rgb (105, 105, 105);
 }
