--- a/flex.css
+++ b/flex.css
@@ -2,7 +2,7 @@
     display: flex;
     border-style: solid;
     border-width: 5px;
-    border-color: red;
+    border-color: pink;
     flex-direction: row;
 }
 
@@ -35,6 +35,8 @@
     border-style: solid;
     border-width: 2px;
     border-color: red;
+    justify-content: center;
+    align-items: center;
 }
 
 body {
