tried fixing css in logo

--- a/flex.css
+++ b/flex.css
@@ -34,9 +34,16 @@
 .flex-item {
     border-style: solid;
     border-width: 2px;
-    border-color: red;
+    border-color: green;
     justify-content: center;
     align-items: center;
+}
+
+.logo-item{
+    border-style: solid;
+    border-width: 4px;
+    border-color: blue;
+    margin: auto;
 }
 
 body {
