--- a/flex.css
+++ b/flex.css
@@ -58,4 +58,10 @@
     margin: auto;
 }
 
-
+.nav-item {
+    border-style: solid;
+    border-width: 2px;
+    border-color: rgb(26, 22, 22);
+    justify-content: center;
+    align-items: center; 
+}
