--- a/flex.css
+++ b/flex.css
@@ -1,4 +1,4 @@
-.flex-container {
+.featured-photo {
     display: flex;
     border-style: solid;
     border-width: 5px;
@@ -10,7 +10,7 @@
     display: flex;
     border-style: solid;
     border-width: 5px;
-    border-color: rgb(255, 0, 200);
+    border-color: rgb(105, 105, 105);
     flex-direction: row;
 }
 
@@ -18,7 +18,7 @@
     display: flex;
     border-style: solid;
     border-width: 4px;
-    border-color: rgb(75, 0, 130);
+    border-color: rgb(105, 105, 105);
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -28,7 +28,7 @@
     display: flex;
     border-style: solid;
     border-width: 5px;
-    border-color: rgb(0, 255, 51);
+    border-color: rgb(105, 105, 105);
     flex-direction: row;
 }
 
@@ -41,10 +41,10 @@
 }
 
 
-.flex-item {
+.featured-item {
     border-style: solid;
     border-width: 2px;
-    border-color: blue;
+    border-color: rgb(26, 22, 22);
     justify-content: center;
     align-items: center; 
 }
