--- a/flex.css
+++ b/flex.css
@@ -58,6 +58,14 @@
     margin: auto;
 }
 
+.project-pictures{
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    height: 20%;
+    width: 20%;
+}
+
 
 .skills-auto-item {
     border-style: solid;
