--- a/flex.css
+++ b/flex.css
@@ -101,7 +101,32 @@ body {
 }
 
 
-
 .project-pictures{
     margin: auto;
+}
+
+
+.skills-list{
+    list-style-type: none;
+    padding: 0;
+    width: 80%;
+    text-align: left;
+}
+
+.skills-list li {
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eee;
+    padding-bottom: 5px;
+}
+
+.skills-list strong {
+    display: block;
+    font-size: 1.1rem;
+    color: #0056b3;
+    margin-bottom: 2px;
+}
+
+.skill-desc {
+    font-size: 0.9rem;
+    color: #555;
 }
