--- a/flex.css
+++ b/flex.css
@@ -177,3 +177,19 @@ body {
     color: #555;
     line-height: 1.4;
 }
+
+.bio-content{
+    text-align: left;
+    padding: 0 10px;
+}
+
+.bio-content p{
+    font-size: 1rem;
+    line-height: 1.6;
+    color: #555;
+    margin-bottom: 15px;
+}
+
+.bio-content strong {
+    color: #0056b3;
+}
