--- a/flex.css
+++ b/flex.css
@@ -12,16 +12,18 @@ body {
     padding: 20px;
 }
 
-
-
-
 .logo_nav_bar {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px 0;
-    margin-bottom: 20px;
-    background-color: transparent;
+
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 12px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+    padding: 15px 0;
+    margin-bottom: 40px;
 }
 
 .logo_nav_bar img {
